--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "config": "^0.4.35",
     "co": "^3.0.5",
     "request": "^2.34.0",
-    "thunkify": "0.0.1"
+    "thunkify": "0.0.1",
+    "lodash": "^2.4.1"
   },
   "devDependencies": {
     "debug": "^0.7.4"
